# likegt

./: .gitignore  BIWFA_INTEGRATION.md  CLAUDE.md  CRITICAL_ISSUE.md  Cargo.toml  DESIGN.md  EXAMPLE_WORKFLOW.md  HG00096_hold0_coverage.tsv  HG00096_hold2out_coverage.tsv  HG00171_coverage.tsv  HOLD2OUT_ANALYSIS.md  JOURNAL.md  K_VALUE_ANALYSIS.md  README.md  REFERENCE_BIAS_ANALYSIS.md  TEST_SUMMARY.md  USAGE_EXAMPLES.md  VALIDATION_REPORT.md  all_paths.fa.ann  all_paths.fa.pac  analyze_pairwise_qv.py  analyze_pairwise_qv_simple.py  build_all_graphs.sh  build_test_graph.sh  check_genotype_accuracy.py  comprehensive_k_test.py  compute_max_qv_allwave.py  compute_max_qv_simple.py  create_individual_maxqv_plots.R  create_pairwise_qv_plot.R  create_qv_plot.R  create_qv_report_simple.py  create_qv_violin_plot.R  create_test_data.py  extract_kmer_results_fixed.py  fix_graph_mismatch.sh  generate_all_plots.sh  generate_gafpack_reference.sh  generate_maxqv_plots.sh  generate_real_reference.sh  (+48 more)
hold2out_results/: hold2out_pipeline_HG00096_20250825_163806.txt  hold2out_pipeline_HG00096_20250825_163816.txt  hold2out_pipeline_HG00096_20250825_163826.txt  hold2out_pipeline_HG00096_20250825_164246.txt  hold2out_pipeline_HG00096_20250825_164256.txt  hold2out_pipeline_HG00096_20250825_164455.txt  hold2out_pipeline_HG00096_20250825_164511.txt  hold2out_pipeline_HG00096_20250825_165153.txt  hold2out_pipeline_HG00096_20250825_165205.txt  hold2out_pipeline_HG00096_20250826_084211.txt  hold2out_pipeline_HG00096_20250826_084222.txt  hold2out_pipeline_HG00096_20250826_085130.txt  (+18 more)
src/: graph.rs  (+15 more)
(+33 files in other folders)
