[package]
name = "likegt"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
itertools = "0.13"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
indicatif = "0.17"

[dev-dependencies]
tempfile = "3.10"
