[package]
name = "likegt"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
itertools = "0.13"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
indicatif = "0.17"
tempfile = "3.10"
lib_wfa2 = { git = "https://github.com/ekg/lib_wfa2", rev = "819b82cd842aabedcb962fd5b82380fe454234f6" }
bio = "1.4"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
which = "6.0"

[dev-dependencies]
